<resources>
    <string name="app_name">TripTracker</string>
    <string name="LBL_TRIP_NAME">Trip Name</string>
    <string name="LBL_START">Start Point</string>
    <string name="LBL_END">End Point</string>
    <string name="LBL_NOTES">Notes</string>
    <string name="LBL_TYPE">Trip Type</string>
    <string name="HINT_TRIP_NAME">Enter Your Trip Name</string>
    <string name="HINT_START_POINT">Enter Your Start Point</string>
    <string name="HINT_END_POINT">Enter Your End Point</string>
    <string name="HINT_NOTES">Notes</string>
    <string name="RBTN_ONE_WAY">One Way</string>
    <string name="RBTN_ROUND_TRIP">Round Trip</string>
    <string name="CANCEL">Cancel</string>
    <string name="DONE">Done</string>
    <string name="newuser">New user ?</string>
    <string name="register">Register Now</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="registerbtn">Register</string>
    <string name="alreadyhaveaccount">Already have an account ?</string>
    <string name="loginTxtBtn">Login</string>
    <string name="othermethods">Other Methods</string>
    <string name="logout">Logout</string>
    <string name="google_maps_key" translatable="false">AIzaSyDVh2YvCYg-Mcjn-pfEIxeth4Ey9il9vFA</string>
    <string name="content_description_media">Trip Image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Trip Tracker</string>
    <string name="nav_header_subtitle">user email</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_upcomingTrips">Upcoming Trips</string>
    <string name="menu_history">History</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_maps">Trips</string>
    <string name="menu_language">عربي</string>
    <string name="menu_deleteAccount">Delete Account</string>
    <string name="GoToMaps">Go To Maps</string>
    <string name="tripTitle">trip title</string>
    <string name="startTrip">Start</string>
    <string name="Snooze">Snooze</string>
    <string name="tripDestination">tripDestination</string>
    <string name="tripSource">source</string>
    <string name="tripDate">Date</string>
    <string name="tripTime">Time</string>
    <string name="start">Start</string>
    <string name="username">UserName</string>

    <string name="facebook_app_id" translatable="false">1417290768615341</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1417290768615341</string>
    <string name="hint_email">Please Enter Your Email Here</string>
    <string name="hint_password">Please Enter Your Password Here</string>
    <string name="LBL_REPEAT">Repeat</string>

    <string-array name="repeating_array">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string name="hint_username">Please Enter Your Username Here</string>
    <string name="Add">Add</string>
    <string name="deleteMSGtitle">Delete</string>
    <string name="deleteMSG">Are you sure you want to Delete ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="mapsErrorMSG">Unable to get location</string>
    <string name="imageErrorMSG">Unable to get photo</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="signinfailed">Failed to signIn</string>
    <string name="authenticationSucceded">Authentication succeeded</string>
    <string name="loginSucceded">Login succeeded.</string>
    <string name="wrongData">Wrong email or password !</string>
    <string name="enterpasswordMSG">Please enter password!</string>
    <string name="enteremailMSG">Please enter email!</string>
    <string name="logoutMSGtitle">Logout</string>
    <string name="logoutMSG">Are you sure you want to logout ?</string>
    <string name="dataSynced">"Data is synced</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="passwordErrorConditions">Less than 6 characters!</string>
    <string name="enterusernameMSG">Please enter username!</string>
    <string name="completeFieldsMSG">Please complete all fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="avgSpeed">Avg Speed</string>
    <string name="shownotes">Show Notes</string>
    <string name="okbtn">Ok</string>
    <string name="BackFrom">Back from</string>

    <string name="add">Add Bubble</string>
    <string name="save">Save</string>
    <string name="addNote">Add Notes</string>
    <string name="show_route">Show Route</string>

    <string name="editnotesBtn">Edit Notes</string>
    <string name="editbtn">Edit</string>
    <string name="AppName">Trip Tracker</string>
    <string name="AddTime">Trip Time</string>
    <string name="AddDate">Trip Date</string>
    <string name="AddNewNote">Add New Note Here</string>


</resources>