<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcomingTrips"
            android:icon="@drawable/ic_upcomingtrips"
            android:title="@string/menu_upcomingTrips" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_maps"
            android:title="@string/menu_maps" />
    </group>

    <group android:id="@+id/part2">
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/menu_sync" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/menu_language" />
    </group>

    <group android:id="@+id/part3">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_deleteAccount"
            android:icon="@drawable/ic_deleteaccount"
            android:title="@string/menu_deleteAccount" />
    </group>
</menu>