<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_upcomingTrips">

    <fragment
        android:id="@+id/nav_upcomingTrips"
        android:name="ahmed.adel.sleeem.clowyy.triptracker.ui.upcoming_trips.UpcomingTripsFragment"
        android:label="@string/menu_upcomingTrips"
        tools:layout="@layout/fragment_upcomingtrips" />

    <fragment
        android:id="@+id/nav_history"
        android:name="ahmed.adel.sleeem.clowyy.triptracker.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="ahmed.adel.sleeem.clowyy.triptracker.ui.maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />

</navigation>