<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tripTitle" />

            <TextView
                android:id="@+id/callType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:padding="5dp"
                android:text="@string/tripDestination" />
        </LinearLayout>


        <ImageView
            android:id="@+id/photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/trip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/purple_200"
            android:text="@string/Snooze"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/purple_200"
            android:text="@string/startTrip"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>