<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TripActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/LBL_TRIP_NAME"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/teal_200"
            android:text="@string/LBL_START"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/LBL_END"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="45dp"
            android:text="@string/LBL_NOTES"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tripTypeTxt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="45dp"
            android:text="@string/LBL_TYPE"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/txtBackTripName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/editText"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/HINT_TRIP_NAME"
            android:inputType="textPersonName"
            android:maxLength="150"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/appName"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appName"
            app:layout_constraintTop_toTopOf="@+id/appName" />

        <EditText
            android:id="@+id/txtBackStartPoint"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/editText"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/HINT_START_POINT"
            android:inputType="textPersonName"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textColorHint="@color/hintColor"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/txtBackEndPoint"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/HINT_END_POINT"
            android:inputType="textPersonName"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textColor="@color/editText"
            android:textColorHint="@color/hintColor"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tripTypeTxt"
            app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
            app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
            app:layout_constraintTop_toTopOf="@+id/tripTypeTxt">

            <RadioButton
                android:id="@+id/rbOneWay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/purple_200"
                android:text="@string/RBTN_ONE_WAY"
                />

            <RadioButton
                android:id="@+id/rbRoundTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RBTN_ROUND_TRIP"
                android:textColor="@color/purple_200"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnTripAdding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"


            />

        <Button
            android:id="@+id/btnAddNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_note_add"
            android:text="@string/addNote"
            android:textAllCaps="false"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
            app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/swtchRepeating"
            app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
            app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
            app:layout_constraintTop_toTopOf="@+id/swtchRepeating">

            <EditText
                android:id="@+id/txtRepeatingNumber"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:text="1"
                android:textColor="@color/purple_200"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/repeatingSpinner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textColor="@color/editText"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dateBtnRound"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_date" />

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/AddDate"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timerBtnRound"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_timer" />

                <TextView
                    android:id="@+id/lblTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:text="@string/AddTime"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/swtchRepeating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/LBL_REPEAT"
            android:textColor="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripTypeTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>